# battery-music-notifier

./: .gitignore  LICENSE  README.md  install.bat  install.sh  main.py  pyproject.toml  requirements.txt
battery_notifier/: __init__.py  adb_helper.py  autostart.py  battery.py  cli.py  config.py  connection.py  diagnostics.py  logs.py  monitor.py  notifier.py  player.py  remote.py  thief_catcher.py  worker_client.py
tests/: test_battery.py  test_bugfixes.py  test_worker_thief.py
worker/: README.md  schema.sql  worker.js  wrangler.toml
worker/self-hosted/: wrangler.toml
