[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-music-notifier"
version = "1.0.0"
description = "Play a song when your battery hits your target charge."
requires-python = ">=3.9"
dependencies = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
windows = ["win10toast", "wmi"]
macos   = ["pync"]
linux   = ["notify2"]
dev     = ["pytest", "pytest-mock"]

[project.scripts]
battery-music = "battery_notifier.cli:main"

[tool.setuptools.packages.find]
include = ["battery_notifier*"]
