[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-music-notifier"
version = "1.0.0"
description = "A distributed, proxy-isolated cross-platform battery telemetry daemon and alerting tool."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Saman" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "PySocks>=1.7.1",
]

[project.optional-dependencies]
windows = ["win10toast", "wmi"]
macos   = ["pync"]
linux   = ["notify2"]
dev     = ["pytest", "pytest-mock"]

[project.scripts]
battery-music = "battery_notifier.cli:main"

[tool.setuptools.packages.find]
include = ["battery_notifier*"]

[tool.setuptools.package-data]
battery_notifier = ["assets/*.wav"]